--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,10 @@ cache_dir = "./.cache"
 path = "contracts/bitsave.clar"
 epoch = "latest"
 
+[contracts.bitsave-badges]
+path = "contracts/bitsave-badges.clar"
+epoch = "latest"
+
 [repl.analysis]
 passes = ["check_checker"]
 check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
