Production ready: Complete frontend integration with confetti, fireworks, and premium UI
- Phase 1-3 complete: Testing, deployment, frontend integration
- Added confetti celebrations on deposits
- Added fireworks on withdrawals
- Enhanced CSS with glassmorphism and animations
- Fixed Clarity deserialization for blockchain data
- Dashboard displays real-time savings and reputation
- Auto-refresh after transactions
- Responsive design with dark mode
- All 79 tests passing

Deployed contracts:
- bitsave-v2: ST2QR5BT57BTVQM69ZFQBMW3BH7KDN3FX56H02TEW.bitsave-v2
- bitsave-badges: ST2QR5BT57BTVQM69ZFQBMW3BH7KDN3FX56H02TEW.bitsave-badges

Dev server: http://localhost:3000
Ready for Vercel deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@stacks/connect": "^8.2.2",
+    "@stacks/transactions": "^7.3.0",
+    "buffer": "^6.0.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
