--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/.next",
-  "framework": "nextjs",
-  "installCommand": "cd frontend && npm install",
-  "devCommand": "cd frontend && npm run dev",
-  "env": {
-    "NEXT_PUBLIC_NETWORK": "testnet",
-    "NEXT_PUBLIC_CONTRACT_ADDRESS": "ST2QR5BT57BTVQM69ZFQBMW3BH7KDN3FX56H02TEW",
-    "NEXT_PUBLIC_CONTRACT_NAME": "bitsave-v2"
+  "github": {
+    "silent": true
   }
 }
